# Xilriws-Public

./: .gitignore  .gitmodules  Dockerfile  README.md  app.py  app_cion.py  config.example.json  config.json.example  docker-compose-no-traefik.yml.example  docker-compose.yml  docker-compose.yml.example  package-lock.json  ptc_auth.py  pyproject.toml  run.sh  xilnanny.sh  xilriws.json.example
.github/workflows/: public_release.yml  publish.yml
app/: app.py  config.json.example  pyproject.toml
xilriws/: __init__.py  browser.py  constants.py  debug.py  extension_comm.py  proxy.py  proxy_dispenser.py  ptc.py  ptc_auth.py  ptc_join.py  reese_cookie.py  task_creator.py
xilriws-cookie-delete/: manifest.json
xilriws-cookie-delete/bundles/: common-background-popup-setting.bundle.js  common-background.bundle.js  common-popup-setting.bundle.js  common-popup-setting.bundle.js.LICENSE.txt  common-setting.bundle.js  popup.bundle.js  setting.bundle.js
xilriws-cookie-delete/global_files/: bootstrap.bundle.min.js  jquery.slim.min.js  jquery.slim.min.js.LICENSE.txt
xilriws-cookie-delete/settings/: settings.html
xilriws-fingerprint-random/: background.js  manifest.json  options.html  popup.html
xilriws-fingerprint-random/_locales/en/: messages.json
xilriws-fingerprint-random/assets/: chunk-16ff15da.js  chunk-1a1456ec.js  chunk-3a7b59dd.js  chunk-7ce85519.js  chunk-aaea1190.js  chunk-b4410958.js  chunk-dfed3562.js  debounce-09920c81.css  options-fe2fb5aa.css  popup-1886d2ef.css
xilriws-fingerprint-random/lib/: chrome.js  common.js  config.js  runtime.js
xilriws-proxy/: background.js  manifest.json  stealth.min.js
xilriws-public/: README.md  docker-compose.yml.example  xilriws.json.example
xilriws-targetfp/: background.js  canvas.js  contentScript.js  general.js  inject.js  manifest.json  screen.js  utils.js  webgl.js
xilriws/browser/: __init__.py  browser.py  browser_auth.py  browser_join.py
xilriws/js/: load.py  recaptcha.py
xilriws/mode/: __init__.py  auth_mode.py  basic_mode.py  cion_mode.py
xilriws/ptc/: ptc_utils.py
(+8 files in other folders)
