[tool.poetry]
name = "maltelogin"
version = "0.1.0"
description = ""
authors = ["Malte <42342921+ccev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
litestar = {extras = ["standard"], version = "^2.7.0"}
httpx = "^0.27.0"
loguru = "^0.7.2"
websockets = "^12.0"
curl-cffi = "^0.6.3"
nodriver = {git = "https://github.com/ccev/nodriver"}


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

