[tool.poetry]
name = "maltelogin"
version = "0.1.0"
description = ""
authors = ["Malte <42342921+ccev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nodriver = "^0.27rc3"
litestar = {extras = ["standard"], version = "^2.7.0"}
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

